src/test/ui/resolve/use_suggestion.stderr
error[E0433]: failed to resolve: use of undeclared type or module `GooMap`
  --> $DIR/use_suggestion.rs:3:14
   |
LL |     let x2 = GooMap::new();
   |              ^^^^^^ use of undeclared type or module `GooMap`

error[E0433]: failed to resolve: use of undeclared type or module `HashMap`
  --> $DIR/use_suggestion.rs:2:14
   |
LL |     let x1 = HashMap::new();
   |              ^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
LL | use std::collections::HashMap;
   |

error[E0412]: cannot find type `HashMap` in this scope
  --> $DIR/use_suggestion.rs:5:13
   |
LL |     let y1: HashMap;
   |             ^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
LL | use std::collections::HashMap;
   |

error[E0412]: cannot find type `GooMap` in this scope
  --> $DIR/use_suggestion.rs:6:13
   |
LL |     let y2: GooMap;
   |             ^^^^^^ not found in this scope

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0412, E0433.
For more information about an error, try `rustc --explain E0412`.
